<resources>
    <string name="app_name">Education</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="school_name">School Name</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
</resources>