<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white"
    tools:context=".SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:contentDescription="App Logo"
                    android:scaleType="fitCenter" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:layout_marginBottom="16dp"
                    >
                    <TextView
                        android:id="@+id/roleStudent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/student"
                        android:gravity="center"
                        android:padding="12dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        android:background="@drawable/bg_toggle_unselected"/>

                    <TextView
                        android:id="@+id/roleTeacher"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher"
                        android:gravity="center"
                        android:padding="12dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:background="@drawable/bg_toggle_selected"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/name"
                    android:padding="12dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="12dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_schoolname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/baseline_school_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/school_name"
                    android:padding="12dp"
                    android:textColor="@color/black" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:inputType="textPassword" />
                    <ImageView
                        android:id="@+id/togglePassword"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_visibility_off_24"
                        android:padding="4dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/signup_cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="Confirm Password"
                    android:padding="12dp"
                    android:paddingEnd="48dp"
                    android:textColor="@color/black"
                    android:inputType="textPassword" />
                    <ImageView
                        android:id="@+id/toggleCPassword"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_visibility_off_24"
                        android:padding="4dp"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/sign_up_btn"
                    android:textSize="18sp"
                    android:backgroundTint="@color/lavender"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/loginRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/already_an_user_login"
                    android:textSize="16sp"
                    android:textColor="@color/lavender"
                    android:padding="8dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
